<resources>
    <string name="app_name">Prokedex</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="bottom_natures">Natures</string>
    <string name="bottom_itemdex">ItemDex</string>
    <string name="bottom_movedex">MoveDex</string>
    <string name="bottom_pokedex">Pokedex</string>
    <string name="bottom_more">More</string>

    <string name="pokedesc_caught">Caught?</string>
    <string name="pokedesc_id">#XXX</string>
    <string name="pokedesc_name">Name</string>
    <string name="pokedesc_namejap">NameJap</string>
    <string name="pokedesc_element1">Element1</string>
    <string name="pokedesc_element2">Element2</string>
    <string name="pokedesc_sprite">Sprite</string>

    <string name="pokedex_id">#XXX</string>
    <string name="pokedex_name">Name</string>
    <string name="pokedex_namejap">NameJap</string>
    <string name="pokedex_element1">Element1</string>
    <string name="pokedex_element2">Element2</string>
    <string name="pokedex_isCaught">Caught</string>

    <string name="movedex_name">Name</string>
    <string name="movedex_power">Power</string>
    <string name="movedex_accuracy">Accuracy</string>
    <string name="movedex_category">Category</string>
    <string name="movedex_type">Type</string>

    <string name="dark_mode_summary">Toggle dark mode</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pokedex_element1_only">Element1 Only</string>

    <string-array name="iv_calculator_pokemon_list">
        <item>Choose Pokemon</item>
    </string-array>

    <string-array name="iv_calculator_nature_list">
        <item>Choose Nature</item>
        <item>Adamant</item>
        <item>Bashful</item>
        <item>Bold</item>
        <item>Brave</item>
        <item>Calm</item>
        <item>Careful</item>
        <item>Docile</item>
        <item>Gentle</item>
        <item>Hardy</item>
        <item>Hasty</item>
        <item>Impish</item>
        <item>Jolly</item>
        <item>Lax</item>
        <item>Lonely</item>
        <item>Mild</item>
        <item>Modest</item>
        <item>Naive</item>
        <item>Naughty</item>
        <item>Quiet</item>
        <item>Quirky</item>
        <item>Rash</item>
        <item>Relaxed</item>
        <item>Sassy</item>
        <item>Serious</item>
        <item>Timid</item>
    </string-array>
</resources>
