<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_movedex"
        android:orderInCategory="1"
        android:title="@string/bottom_movedex"
        app:showAsAction="never"
        android:icon="@drawable/ic_movedex_bottomnav"/>

    <item
        android:id="@+id/bottom_nav_itemdex"
        android:orderInCategory="2"
        android:title="@string/bottom_itemdex"
        app:showAsAction="never"
        android:icon="@drawable/ic_itemdex_bottomnav"/>

    <item
        android:id="@+id/bottom_nav_pokedex"
        android:orderInCategory="3"
        android:title="@string/bottom_pokedex"
        app:showAsAction="never"
        android:icon="@drawable/ic_pokedex_bottomnav"/>

    <item
        android:id="@+id/bottom_nav_natures"
        android:orderInCategory="4"
        android:title="@string/bottom_natures"
        app:showAsAction="never"
        android:icon="@drawable/ic_natures_bottomnav"/>

    <item
        android:id="@+id/bottom_nav_more"
        android:orderInCategory="5"
        android:title="@string/bottom_more"
        app:showAsAction="never"
        android:icon="@drawable/ic_more_bottomnav"/>
</menu>