<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_pokedex"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/pokedex_background_is_caught"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_margin="5dp"
                    android:cropToPadding="false"
                    android:scaleType="matrix" />

                <ImageView
                    android:id="@+id/pokedex_sprite"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:cropToPadding="false"
                    android:scaleType="matrix" />

            </FrameLayout>

            <TextView
                android:id="@+id/pokedex_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:text="@string/pokedex_id"
                android:textColor="#3c3c3c"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/frameLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pokedex_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/pokedex_name"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/pokedex_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pokedex_name_jap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:text="@string/pokedex_namejap"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintStart_toEndOf="@+id/frameLayout"
                app:layout_constraintTop_toBottomOf="@+id/pokedex_id" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frameLayout"
                app:layout_constraintTop_toTopOf="@+id/guideline5">

                <TextView
                    android:id="@+id/pokedex_element1"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pokedex_element1"
                    android:textColor="@color/black" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="30dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/guideline5">

                <TextView
                    android:id="@+id/pokedex_element2"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pokedex_element2"
                    android:textColor="@color/black" />

            </android.support.v7.widget.CardView>

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>